# python-tobii-stream-engine

./: .envrc  .gitignore  README.md  pdm_build.py  pyproject.toml  shell.nix
examples/: subscriptions.py  usage.py
tobii_stream_engine/: __init__.py  api.py  capabilities.py  device.py  errors.py  streams.py
tobii_stream_engine/builder/: build.py  build_header_files.py
tobii_stream_engine/builder/include/: tobii.h  tobii_advanced.h  tobii_config.h  tobii_licensing.h  tobii_streams.h  tobii_wearable.h  typedefs.h
