[project]
name = "tobii-stream-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "betaboon", email = "betaboon@0x80.ninja"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "cffi>=1.16.0",
]

[tool.pdm.build]
run-setuptools = true

[tool.pdm.dev-dependencies]
linting = [
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "types-beautifulsoup4>=4.12.0.7",
    "types-cffi>=1.16.0.0",
    "types-requests>=2.31.0.10",
]
testing = [
    "pytest>=7.4.3",
]
dev = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "unmarkd>=1.1.1",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle - error
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "PLC", # pylint - convention
    "PLE", # pylint - error
    "PLW", # pylint - warning
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "W", # pycodestyle - warning
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["pdm-backend", "setuptools", "cffi"]
build-backend = "pdm.backend"
